feat: implement E2E payload encryption and upgrade public page UI